# math_modeling_simplex_method

./: CMakeLists.txt  README.md
license/: LICENSE.txt
src/: doctest.h  fraction.cpp  fraction.h  main.cpp  smatrix.cpp  smatrix.h  tests.cpp
